# MILFS---marvellously-interesting-log-file-system

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
src/: 1  CMakeLists.txt  allocator.cpp  cli.cpp  fs_core.cpp  fs_fuse.cpp  fuse_main.cpp  gc.cpp  inode.cpp  inode_table.cpp  lfs.cpp  log_buffer.cpp  main.cpp  metadata_log.cpp  recovery.cpp  segment_io.cpp
src/headers/: allocator.h  directory.h  fs_core.h  fs_fuse.h  gc.h  inode.h  inode_table.h  lfs.h  log_buffer.h  metadata_format.h  metadata_log.h  recovery.h  segment_io.h
test/: CMakeLists.txt  main.cpp
test/tests/: ParserCommandTest.cpp
test/tests/any/: errors_00  errors_00.in  exit_00  exit_01  help_00  help_00.in
test/tests/cat/: cat_00  cat_00.in  cat_01.in  cat_02.in
test/tests/create/: create_00  create_00.in  create_01  create_01.in  create_02  create_02.in
test/tests/hard_tests/: hard_00  hard_00.in  hard_01  hard_01.in
test/tests/ls/: ls_00  ls_00.in  ls_01  ls_01.in  ls_02  ls_02.in  ls_03  ls_03.in  ls_04  ls_04.in
test/tests/mkdir/: mkdir_00  mkdir_00.in  mkdir_01  mkdir_01.in  mkdir_02  mkdir_02.in  mkdir_03  mkdir_03.in
test/tests/read/: read_00.in  read_01  read_01.in  read_02  read_02.in
test/tests/write/: write_00  write_00.in  write_01  write_01.in  write_02  write_02.in
